--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <h1>Prueba</h1>
 
-    <a href="http://construtecdeleste.com/test2/" target="_top"> ABRIR   </a>
+    <a href="./pepito.html" > ABRIR   </a>
     
 </body>
 </html>
