imp menu y varible session

--- a/pepito.html
+++ b/pepito.html
@@ -25,7 +25,7 @@
 </head>
 <body>
 <div class="embed-container">
-    <iframe src="http://construtecdeleste.com/test2/" frameborder="0"  ></iframe>
+    <iframe src="http://construtecdeleste.com/test2/preload.html?idUsuario=pepito" frameborder="0"  ></iframe>
 </div>
 
     
